--- a/proyectoFinal-main1209/src/main/resources/application.properties
+++ b/proyectoFinal-main1209/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost/distribuidora18
-spring.datasource.username=root
-spring.datasource.password=Ares10281816
+spring.datasource.url=jdbc:postgresql://db.ekvriryplzgokwocatoe.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Ares10281816*
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.hibernate.SQL=debug
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+
+
